--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
         <div class="row">
           
           <div class="col-sm-4">
-            <img src="assets/UW_Logo.png" alt="Colorado Fourteeners Project" width="200px" height="200px" id="previewImage1"><br><br>
+            <img src="assets/UW_Logo.png" alt="Colorado Fourteeners Project" width="200px" height="200px"><br><br>
             <a class="btn btn-lg btn-default" data-dismiss="modal" data-toggle="modal" data-target="#portfolioModal1">Fourteeners Project</a>
             <div id="portfolioModal1" class="modal">
               <!-- span class="close glyphicon glyphicon-remove-circle"></span -->
@@ -134,7 +134,7 @@
           </div -->
 
           <div class="col-sm-4">
-            <img src="assets/OSU_Logo.png" alt="Mount Hood Project" width="200px" height="200px" id="previewImage3"><br><br>
+            <img src="assets/OSU_Logo.png" alt="Mount Hood Project" width="200px" height="200px"><br><br>
             <a class="btn btn-lg btn-default" data-dismiss="modal" data-toggle="modal" data-target="#portfolioModal3">Mount Hood Topology</a>
             <div id="portfolioModal3" class="modal">
               <!-- span class="close glyphicon glyphicon-remove-circle"></span -->
