--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
             <img class="rounded-circle img-logo" src="assets/Github_Icon.png" alt="GitHub" width="140" height="140">
             <a href="https://github.com/kmcphail" target="_blank"><img class="rounded-circle img-profile" src="assets/Github_Profile.png" alt="GitHub Profile" width="140" height="140"></a>
             <h2>GitHub</h2>
-            <p>Check out some of my complete projects at GitHub</p>
+            <p>Check out some of my past projects at GitHub</p>
           </div><br><br>
           
           <!-- LinkedIn -->
