--- a/leaflet.html
+++ b/leaflet.html
@@ -58,7 +58,7 @@
     <script type="text/javascript" src="lib/bootstrap.js"></script>
     <!--script type="text/javascript" src="js/main.js"></script-->
     <script type="text/javascript" src="js/geojson.js"></script>
-    <script type="text/javascript" src="js/darksky.js"></script>
+    <!--<script type="text/javascript" src="js/darksky.js"></script>-->
     
   </body>
 </html>
