--- a/leaflet.html
+++ b/leaflet.html
@@ -34,23 +34,6 @@
     </div>
     <div id="forecast"></div>
     <div id="panel"></div>
-    
-    <!--<form class="form" method="get">
-      <fieldset>
-        <ul>
-          <li>
-            <label for="lat">Latitude</label>
-            <input type="text" id="lat_input" placeholder="Latitude" required>
-          </li>
-          <li>
-            <label for="lng">Longitude</label>
-            <input type="text" id="lng_input" placeholder="Longitude" required>
-          </li>
-        </ul>
-      </fieldset>
-      <button>Get Forecast</button>
-    </form>-->
-
 
     <!--script type="text/javascript" src="lib/leaflet-src.js"></script-->
     <script type="text/javascript" src="lib/Leaflet.markercluster-1.3.0/dist/leaflet.markercluster.js"></script>
@@ -58,7 +41,7 @@
     <script type="text/javascript" src="lib/bootstrap.js"></script>
     <!--script type="text/javascript" src="js/main.js"></script-->
     <script type="text/javascript" src="js/geojson.js"></script>
-    <script type="text/javascript" src="js/darksky.js"></script>
+    <!--<script type="text/javascript" src="js/darksky.js"></script>-->
     
   </body>
 </html>
