--- a/leaflet.html
+++ b/leaflet.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
+    <meta name="author" content="Kirk McPhail">
+    <meta name="description" content="This page is designed to display a map of mountain peaks.">
+    <meta name="keywords" content="webpage, GIS, web map, Colorado, mountains, peaks, fourteeners">
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+    <title>Colorado Fourteeners</title>
     
     <!--put your external script links here-->
     <script type="text/javascript" src="lib/leaflet.js"></script>
@@ -39,7 +43,6 @@
     <script type="text/javascript" src="lib/Leaflet.markercluster-1.3.0/dist/leaflet.markercluster.js"></script>
     <script type="text/javascript" src="lib/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="lib/bootstrap.js"></script>
-    <!--script type="text/javascript" src="js/main.js"></script-->
     <script type="text/javascript" src="js/geojson.js"></script>
     <!--<script type="text/javascript" src="js/darksky.js"></script>-->
     
