--- a/experience.html
+++ b/experience.html
@@ -43,15 +43,15 @@
       </nav>
     </header>
 
-    <main class="main" role="main">
-      <div class="container album text-muted">
-        <div class="row">
+    <main class="main contourExperience" role="main">
+      <div class="container-fluid album text-muted">
+        <div class="row flex-container">
           
-          <div class="col-sm-4">
-            <p class="card-text">Masters</p>
+          <div class="col-md-4">
+            <p class="card-text">Master of Science</p>
             <img class="univLogo" src="assets/UW_Logo.png" alt="UW" width="200px" height="200px" data-toggle="modal" data-target="#uwModal">
             <div class="textOverlay">
-              <div class="degreeText">Masters</div>
+              <div class="degreeText">Master of Science</div>
             </div>
             <div id="uwModal" class="modal fade" role="dialog">
               <div class="modal-dialog">
@@ -95,7 +95,7 @@
             </div>
           </div><br><br>
 
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <p class="card-text">Graduate Certificate</p>
             <img class="univLogo" src="assets/OSU_Logo.png" alt="OSU" width="200px" height="200px" data-toggle="modal" data-target="#osuModal">
             <div class="textOverlay">
@@ -145,11 +145,11 @@
             </div>
           </div><br><br>
           
-          <div class="col-sm-4">
-            <p class="card-text">Bachelors</p>
+          <div class="col-md-4">
+            <p class="card-text">Bachelor of Science</p>
             <img class="univLogo" src="assets/CSU_Logo.png" alt="CSU" width="150px" height="210px" data-toggle="modal" data-target="#csuModal">
             <div class="textOverlay">
-              <div class="degreeText">Bachelors</div>
+              <div class="degreeText">Bachelor of Science</div>
             </div>
             <div id="csuModal" class="modal fade" role="dialog">
               <div class="modal-dialog">
