--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </nav>
     </header>
     
-    <main class="main topoMap" role="main">
+    <main class="main flex-container topoMap" role="main">
       <!-- Inner text -->
       <div class="container cover-inner">
         <h2 class="cover-heading">
